--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <p class="title" id="title">song title</p>
                     <p class="subtitle" id="subtitle">song subtitle</p>
                     <hr>
-                    <p class="data"><span class="difficulty" id="difficulty">Expert+</span> <span class="bpm" id="bpm">200bpm</span></p>
+                    <p class="data"><span class="difficulty" id="difficulty">Expert+</span> <span class="bpm" id="bpm">200bpm</span> <span class="njs" id="njs">2.5njs</span></p>
                     <hr>
                     <p class="author"><span class="songPrefix">author: </span><span id="author">song author</span></p>
                     <p class="mapper"><span class="songPrefix">map by: </span><span id="mapper">song mapper</span></p>
