--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div class="songDisplay">
 
                 <div class="performance">
-                    <p class="rank"><span id="rank">SS</span> <span class="accuracy" id="accuracy">(100%)</span></p>
+                    <p class="rank"><span class="accuracy" id="accuracy">(100%)</span> <span id="rank">SS</span></p>
                     <p class="score"><span id="score">1,000,000</span></p>
-                    <p class="combo"><span id="combo">200</span><span class="postfix">combo</span></p>
+                    <p class="combo"><span class="postfix">combo</span> <span id="combo">200</span></p>
                 </div>
 
                 <div class="song">
