--- a/beta/index.html
+++ b/beta/index.html
@@ -11,9 +11,9 @@
 
     <body>
 
-        <div id="ui">
+        <div class="animator" id="ui">
 
-            <div class="performanceDisplay">
+            <div class="performanceDisplay" id="performanceDisplay">
                 
                 <div class="comboContainer">
                     <span class="comboPrefix">combo</span>
@@ -36,6 +36,10 @@
 
             </div>
 
+
+            <div class="beatmapDisplay" id="beatmapDisplay">
+                
+            </div>
 
             <div class="songDisplay">
 
