new beatmap display

--- a/beta/index.html
+++ b/beta/index.html
@@ -38,9 +38,28 @@
 
 
             <div class="beatmapDisplay" id="beatmapDisplay">
+                <div class="titleContainer">
+                    <span class="title" id="title">song title</span><br>
+                    <span class="subtitle" id="subtitle">song subtitle</span>
+                </div>
+                </br>
+                <div class="coverContainer">
+                    <img class="cover" id="cover" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/1f/1f82a488b31d775905512e5ce8f386b642c58203_full.jpg">
+                    <div class="coverText">
+                        <span class="difficulty" id="difficulty">Expert+</span></br>
+                        <span class="bpm" id="bpm">120 BPM</span></br>
+                        <span class="njs" id="njs">200 NJS</span>
+                    </div>
+                </div>
+                </br>
+                <div class="metaContainer">
+                    <span class="songPrefix">author:</span></br><span class="author" id="author">song author</span></br></br>
+                    <span class="songPrefix">map by:</span></br><span class="mapper" id="mapper">song mapper</span>
+                </div>
+
                 
             </div>
-
+<!--
             <div class="songDisplay">
 
                 <div class="song">
@@ -55,7 +74,7 @@
                 </div>
 
             </div>
-
+        -->
 
             
         </div>
