--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
         <div class="animator" id="ui">
 
+            <div class="background">
+            </div>
+
             <div class="performanceDisplay" id="performanceDisplay">
                 
                 <div class="comboContainer">
