--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
 
         <div class="animator" id="ui">
 
-            <div class="background">
-            </div>
-
             <div class="performanceDisplay" id="performanceDisplay">
-                
                 <div class="comboContainer">
                     <span class="comboPrefix">combo</span>
                     </br>
@@ -36,9 +32,13 @@
                 <div class="multiplierContainer">
                     <span class="multiplierPrefix">x</span><span class="multiplier" id="multiplier">8</span>
                 </div>
-
             </div>
 
+<!--
+            <div class="resultsDisplay" id="resultsDisplay">
+
+            </div>
+-->
 
             <div class="beatmapDisplay" id="beatmapDisplay">
                 <div class="titleContainer">
@@ -59,8 +59,6 @@
                     <span class="songPrefix">author:</span></br><span class="author" id="author">song author</span></br></br>
                     <span class="songPrefix">map by:</span></br><span class="mapper" id="mapper">song mapper</span>
                 </div>
-
-                
             </div>
 
 
