--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
             <div class="resultsDisplay" id="resultsDisplay">
-                <span>Values ​​of today's session</span></br></br>
+                <span>Results of current session</span></br></br>
                 <div>
                     <div class="resultsContainer">
                         Notes:</br>
