--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="resultsContainer">
                         Performance:</br>
                         <span class="performance" id="songsScore">12,000,000</span> <span class="resultsPostfix">pp</span></br>
-                        <span class="performance" id="songsComplete">12</span> <span class="resultsPostfix">songs finnished</span></br>
+                        <span class="performance" id="songsComplete">12</span> <span class="resultsPostfix">songs finished</span></br>
                         <span class="performance" id="songsUncomplete">4</span> <span class="resultsPostfix">songs failed</span></br>
                     </div>
                 </div>
